# CMP

./: .cursorrules  .dockerignore  .gitignore  .gitmodules  CHANGES.txt  DEMO_SCRIPT.md  DEPLOYMENT_FIXES.md  DOCS_INDEX.md  FEATURES_COMPLETE.md  GITHUB_CALLBACK_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  KIRO_INSTRUCTIONS.md  MIGRATION_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RELEASE_GUIDE.md  SETUP_INSTRUCTIONS.md  TERRAFORM_SECRETS_HANDOFF.md  TEST_RUNTIME_CONFIG.md  TROUBLESHOOTING.md  VERIFICATION_CHECKLIST.md  check_status.sh  docker-compose.yml  setup.sh  values-secrets.yaml.example
backend/: .env.example  .pylintrc  CHANGELOG_TERRAFORM_SECRETS.md  DEBUG_GITHUB_TOKEN.md  Dockerfile  GITHUB_TOKEN_QUICKSTART.md  GRAFANA_DELIVERY.md  GRAFANA_FIX_APPLIED.md  GRAFANA_IMPLEMENTATION_SUMMARY.md  GRAFANA_INTEGRATION.md  GRAFANA_QUICKSTART.md  MCP_IMPLEMENTATION_SUMMARY.md  MCP_SERVER_README.md  MESSAGE_TEST_MCP.md  PHASE3_ARCHITECTURE.md  PHASE3_CHECKLIST.md  PHASE3_COMPLETE.md  PHASE3_IMPLEMENTATION.md  PHASE3_MIGRATION.md  PHASE3_SUMMARY.md  QUICKSTART_PHASE3.md  QUICKSTART_TERRAFORM.md  QUICK_START_MCP.md  README.md  README_TERRAFORM_SECRETS.md  TERRAFORM_INTEGRATION.md  TERRAFORM_MIGRATION.md  TERRAFORM_SECRETS_SUMMARY.md  apps.json  arcl.db  compare_app_configs.py  debug_github_token.py  debug_github_token.sh  docker-entrypoint.sh  main.py  mcp-config-example.json  pyproject.toml  setup_mcp.sh  setup_phase3.sh  sync_existing_projects_to_grafana.py  (+10 more)
backend/alembic/: env.py
backend/app/: main.py  mcp_server.py
backend/app/core/: config.py  (+1 more)
(+165 files in other folders)
