[tool.poetry]
name = "arcl-cmp-backend"
version = "0.1.0"
description = "ARCL Hybrid Cloud Management Platform - Backend API"
authors = ["3-Istor Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
boto3 = "^1.34.0"
openstacksdk = "^3.0.0"
gitpython = "^3.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
pylint = "^3.2.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
